Make Viju's theme for mazer

--- a/src/layouts/master.html
+++ b/src/layouts/master.html
@@ -17,7 +17,7 @@
     <script src="assets/static/js/initTheme.js"></script>
     <div id="app">
         <div id="sidebar">
-            {% include "src/layouts/sidebar.html" %}
+            {% include "src/layouts/sidebar-restaurant.html" %}
         </div>
         <div id="main">
             <header class="mb-3">
@@ -31,7 +31,7 @@
     </div>
     <script src="assets/static/js/components/dark.js"></script>
     <script src="assets/extensions/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-    
+
     {% if isDev %}
     <script src="assets/js/app.js" type="module"></script>
     {% else %}
