--- a/src/layouts/horizontal.html
+++ b/src/layouts/horizontal.html
@@ -26,8 +26,10 @@
                         <div class="header-top-right">
 
                             <div class="dropdown">
-                                <a href="#" id="topbarUserDropdown" class="user-dropdown d-flex align-items-center dropend dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="false">
-                                    <div class="avatar avatar-md2" >
+                                <a href="#" id="topbarUserDropdown"
+                                    class="user-dropdown d-flex align-items-center dropend dropdown-toggle "
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    <div class="avatar avatar-md2">
                                         <img src="assets/static/images/faces/1.jpg" alt="Avatar">
                                     </div>
                                     <div class="text">
@@ -35,11 +37,14 @@
                                         <p class="user-dropdown-status text-sm text-muted">Member</p>
                                     </div>
                                 </a>
-                                <ul class="dropdown-menu dropdown-menu-end shadow-lg" aria-labelledby="topbarUserDropdown">
-                                  <li><a class="dropdown-item" href="#">My Account</a></li>
-                                  <li><a class="dropdown-item" href="#">Settings</a></li>
-                                  <li><hr class="dropdown-divider"></li>
-                                  <li><a class="dropdown-item" href="auth-login.html">Logout</a></li>
+                                <ul class="dropdown-menu dropdown-menu-end shadow-lg"
+                                    aria-labelledby="topbarUserDropdown">
+                                    <li><a class="dropdown-item" href="#">My Account</a></li>
+                                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="auth-login.html">Logout</a></li>
                                 </ul>
                             </div>
 
@@ -109,11 +114,11 @@
                 <div class="container">
                     <div class="footer clearfix mb-0 text-muted">
                         <div class="float-start">
-                            <p>2023 &copy; Mazer</p>
+                            <p>2025 &copy; Mazer & Kamath Abhishek</p>
                         </div>
                         <div class="float-end">
                             <p>Crafted with <span class="text-danger"><i class="bi bi-heart"></i></span> by <a
-                                href="https://saugi.me">Saugi</a></p>
+                                    href="https://github.com/bobabhishek">Kamath Abhishek</a></p>
                         </div>
                     </div>
                 </div>
